# dvd-ripper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  ripper.py
src/dvd_ripper/: main.py
